--- a/my-blog/package.json
+++ b/my-blog/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "mongodb": "^6.1.0",
     "next": "13.5.4",
     "react": "^18",
