--- a/my-blog/package.json
+++ b/my-blog/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "module-alias": "^2.2.3",
     "mongodb": "^6.1.0",
+    "mongoose": "^7.6.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
